@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-13T01:59:25Z",
-  "count" : 7,
+  "timestamp" : "2022-08-26T08:29:38Z",
+  "count" : 6,
   "count_minmax" : [ 1, 7 ],
-  "count_decinc" : [ -0, +7 ],
+  "count_decinc" : [ -1, +7 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
